[tool]
[tool.poetry]
name = "Catsup"
version = "0.3.11"
description = "Catsup, a lightweight static blog generator"
authors = ["Wu Haotian <whtsky@gmail.com>"]
keywords = ["catsup", "blog", "site", "static", "static", "blog", "static", "site", "generator"]
classifiers = ["Development Status :: 4 - Beta", "Environment :: Console", "License :: OSI Approved :: MIT License", "Operating System :: MacOS", "Operating System :: POSIX", "Operating System :: POSIX :: Linux", "Programming Language :: Python", "Programming Language :: Python :: 3.5", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8"]
readme = "README.rst"


[tool.poetry.scripts]
catsup = "catsup.cli:main"

[tool.poetry.dependencies]
python = "^3.5"
docopt = "==0.6.2"
"houdini.py" = "==0.1.0"
jinja2 = "==2.7.2"
misaka = "==1.0.2"
parguments = "==0.3.2"
pygments = "==1.6"
tornado = "==3.2"
ujson = "==2.0.3"
watchdog = "==0.7.0"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
coveralls = "^1.11.1"
black = {version = "^19.10b0", python = "^3.6"}
codecov = "^2.1.9"
